# minimum-vscode-cpp

./: .gitignore  CMakeLists.txt  README.md  hello.cpp  memo.md  test_sample.cpp
include/: catch.hpp  math.hpp
test/: test_math.cpp
